# pg-auto-backup

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.gitlab  README.md
.github/workflows/: build-image.yaml
example/: default.toml  default.yaml  storage-azure.toml  storage-local.toml  storage-s3.toml
example/database/: postgresql.yaml
example/storage/: azure-blob.yaml  local.yaml  s3.yaml
src/: job.rs  main.rs
src/configs/: config.rs  connection.rs  database.rs  general.rs  location.rs  mod.rs  pg_dump.rs
src/configs/client/: mod.rs  pg_dump.rs
src/configs/connection/: mod.rs  postgresql.rs
src/configs/database/: mod.rs  postgresql.rs
src/configs/storage/: azure.rs  local.rs  mod.rs  s3.rs
src/enums/: disable.rs  do_not_save.rs  format.rs  mod.rs  one_of.rs  pg_disable.rs  pg_do_not_save.rs  pg_format.rs  pg_section.rs  section.rs
src/extension/: deserializer.rs  mod.rs
src/pg/: dump.rs  mod.rs
src/provider/: mod.rs  pg_dump.rs
src/traits/: check.rs  dump.rs  mod.rs  storage.rs
