[package]
name = "pg-auto-backup"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "1.17.0"
confy = { version = "0.6.1", default_features = false, features = [
    "yaml_conf",
] }
env_logger = "0.11.3"
log = { version = "0.4.21", features = ["serde"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.34"
tokio-cron-scheduler = "0.10.0"
uuid = "1.7.0"
cron = "0.12.1"
azure_storage_blobs = "0.19.0"
azure_storage = "0.19.0"
